OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Opportunity_Chain__e/Onboarding_Opportunity_Chain__e.object-meta.xml
<CustomObject>
    <label>Onboarding Opportunity Chain</label>
    <pluralLabel>Onboarding Opportunity Chains</pluralLabel>
</CustomObject>