OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Opportunity_Chain__e/fields/Correlation_Key__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Key__c</fullName>
    <label>Correlation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>