OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Opportunity_Chain__e/fields/Payload_Type__c.field-meta.xml
<CustomField>
    <fullName>Payload_Type__c</fullName>
    <label>Payload Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>