OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Opportunity_Chain__e/fields/Vendor_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Id__c</fullName>
    <label>Vendor Program Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>